--- a/views/admin/add-products.ejs
+++ b/views/admin/add-products.ejs
@@ -49,15 +49,15 @@
         <textarea type="text" name="dimension" id="dimension" class="form-control"><%= skus.dimension%></textarea>
       </div>
       <div class="input-group mb-3 col-md-4">
-        <input type="file" class="form-control" id="image1" name="image1">
+        <input type="file" class="form-control" id="image1" name="image1" accept="image/png, image/jpeg, image/webp">
         <label class="input-group-text" for="image1">Upload</label>
       </div>
       <div class="input-group mb-3 col-md-4">
-        <input type="file" class="form-control" id="image2" name="image2">
+        <input type="file" class="form-control" id="image2" name="image2" accept="image/png, image/jpeg, image/webp">
         <label class="input-group-text" for="image2">Upload</label>
       </div>
       <div class="input-group mb-3 col-md-4">
-        <input type="file" class="form-control" id="image3" name="image3">
+        <input type="file" class="form-control" id="image3" name="image3" accept="image/png, image/jpeg, image/webp">
         <label class="input-group-text" for="image3">Upload</label>
       </div>
       <div class="row">
