--- a/views/users/cart.ejs
+++ b/views/users/cart.ejs
@@ -12,7 +12,7 @@
     <% cart.forEach(item => { %> 
       <% count++ %> 
     <div class="card row d-flex flex-row p-4 mb-2">
-      <div class="col-sm-6">
+      <div class="col-sm-6 d-flex align-items-center justify-content-center">
         <img class="cart-images" src="/<%= item.skus[0].images[0] %> " alt="">
       </div>
       <div class="col-sm-6">
