--- a/views/users/wishlist.ejs
+++ b/views/users/wishlist.ejs
@@ -10,8 +10,8 @@
       <% wishlist.forEach(item => { %> 
     <div class="col-md-12">
       <div class="card row d-flex flex-row p-4 m-4">
-        <div class="col-md-4">
-          <img class="cart-images" src="<%= item.skus.images[0] %> " alt="">
+        <div class="col-md-4 d-flex justify-content-center">
+          <img class="wishlist-images" src="<%= item.skus.images[0] %> " alt="">
         </div>
         <div class="col-md-8 d-flex flex-column justify-content-between">
           <div>
