--- a/views/admin/product-skus-edit.ejs
+++ b/views/admin/product-skus-edit.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 <%- include('../partials/head') %> 
 <body class="pt-5">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.css" integrity="sha512-cyzxRvewl+FOKTtpBzYjW6x6IAYUCZy3sGP40hn+DQkqeluGRCax7qztK2ImL64SA+C7kVWdLI6wvdlStawhyw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <%- include('../partials/admin/admin-navbar') %> 
   <section class="container p-4">
     <p id="error" class="text-danger"></p>
@@ -38,20 +39,20 @@
         </div>
       </div>
       <div class="input-group mb-3 col-md-4">
-        <input type="file" class="form-control" id="image1" name="image1" data-id="img1" onchange="viewImage(event, this.id)">
+        <input type="file" class="form-control" id="image1" name="image1" data-id="img1" onchange="viewImage(event, this.id)" accept="image/png, image/jpeg, image/webp">
         <label class="input-group-text" for="image1">Upload</label>
       </div>
       <div class="input-group mb-3 col-md-4">
-        <input type="file" class="form-control" id="image2" data-id="img2" name="image2" onchange="viewImage(event, this.id)">
+        <input type="file" class="form-control" id="image2" data-id="img2" name="image2" onchange="viewImage(event, this.id)" accept="image/png, image/jpeg, image/webp">
         <label class="input-group-text" for="image2">Upload</label>
       </div>
       <div class="input-group mb-3 col-md-4">
-        <input type="file" class="form-control" id="image3" data-id="img3" name="image3" onchange="viewImage(event, this.id)">
+        <input type="file" class="form-control" id="image3" data-id="img3" name="image3" onchange="viewImage(event, this.id)" accept="image/png, image/jpeg, image/webp">
         <label class="input-group-text" for="image3">Upload</label>
       </div>
       <div class="row">
         <div class="col-3">
-          <button id="update-button" class="btn btn-primary" data-url="<%= skus._id %> " onclick="updateSku(this.id)">Submit</button>
+          <button id="update-button" type="button" class="btn btn-primary" data-url="<%= skus._id %> " onclick="updateSku(this.id)">Submit</button>
         </div>
         <div class="col-3">
           <a href="/admin" class="btn btn-outline-primary">Cancel</a>
@@ -60,6 +61,7 @@
     </form>
   </section>
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.js" integrity="sha512-6lplKUSl86rUVprDIjiW8DuOniNX8UDoRATqZSds/7t6zCQZfaCe3e5zcGaQwxa8Kpn5RTM9Fvl3X2lLV4grPQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script defer src="/script/navbarScroll.js"></script> 
   <script defer src="/script/updateAndDeleteSku.js"></script>
   <script defer src="/script/changeImage.js"></script>
