--- a/views/users/order-placed.ejs
+++ b/views/users/order-placed.ejs
@@ -6,7 +6,7 @@
 <section class="container min-vh-100 pt-5">
   <div class="row mt-5">
     <div class="col-4 d-flex flex-column align-items-center m-auto justify-content-center mt-5">
-      <svg class="success-tick" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.2.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512zM369 209L241 337c-9.4 9.4-24.6 9.4-33.9 0l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L335 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z"/></svg>
+      <lottie-player src="https://assets10.lottiefiles.com/packages/lf20_sqi4v74j.json"  background="transparent"  speed="1"  class="success-tick" autoplay></lottie-player>
       <p class="mt-4">Order placed successfully</p>
       <a href="/orders">Go to orders</a>
     </div>
