--- a/views/users/invoice.ejs
+++ b/views/users/invoice.ejs
@@ -265,7 +265,7 @@
                 <div class="col-sm-6 text-right">
                   <span>Payment To</span>
                   <strong>
-                    Kroma Corporation Pvt Ltd
+                    Kromium Corporation Pvt Ltd
                   </strong>
                   <p>
                     344 9th Avenue <br>
@@ -332,7 +332,7 @@
           </div>
 
           <div class="footer">
-            Copyright © 2023. KROMA
+            Copyright © 2023. KROMIUM
           </div>
         </div>
       </div>
