--- a/views/partials/admin/admin-login-navbar.ejs
+++ b/views/partials/admin/admin-login-navbar.ejs
@@ -4,7 +4,7 @@
       <a class="navbar-brand" href="#">
         <img class="logo h-100" src="/assets/logo/kroma-logo.png" alt="Bootstrap" width="30" height="24">
       </a>
-      <a class="navbar-brand" href="/">KROMA</a>
+      <a class="navbar-brand" href="/">KROMIUM</a>
     </div>
   </div>
 </nav>
