--- a/views/partials/user-navbar.ejs
+++ b/views/partials/user-navbar.ejs
@@ -4,7 +4,7 @@
       <a class="navbar-brand" href="#">
         <img class="logo h-100" src="/assets/logo/kroma-logo.png" alt="Bootstrap" width="30" height="24">
       </a>
-      <a class="navbar-brand" href="/">KROMA</a>
+      <a class="navbar-brand" href="/">KROMIUM</a>
     </div>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
