wishlist button fixed

--- a/views/admin/admin-login.ejs
+++ b/views/admin/admin-login.ejs
@@ -20,10 +20,7 @@
               <label class="col-12 login-label" for="password">Password</label>
               <input class="col-12 login-input" type="password" name="password" id="password">
             </div>
-            <div class="my-3">
-              <a href="">Forgot Password</a>
-            </div>
-            <div class="d-flex justify-content-center m-4">
+            <div class="d-flex justify-content-center mt-5">
               <button class="main-button" type="submit">Sign In</button>
             </div>
           </form>
