--- a/views/admin/sales-report.ejs
+++ b/views/admin/sales-report.ejs
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-<body style="width: 100%; box-sizing: border-box; display: flex; justify-content: center; margin: 10px;">
+<body style="zoom: 0.5; width: 100%; box-sizing: border-box; display: flex; justify-content: center; margin: 10px;">
   <div>
     <div>
       <table style="border: solid 1px black; border-collapse: collapse;">
