--- a/views/users/checkout.ejs
+++ b/views/users/checkout.ejs
@@ -58,7 +58,7 @@
             <% }) %> 
             <% }else{ %>
               <div class="pt-4 d-flex justify-content-center">
-                <a href="/dashboard" class="main-button text-decoration-none">Add address</a>
+                <a href="/dashboard/address/add" class="main-button text-decoration-none">Add address</a>
               </div>
             <% } %>  
           </div>
