--- a/views/users/manage-address.ejs
+++ b/views/users/manage-address.ejs
@@ -43,7 +43,9 @@
         <% }) %> 
       </div>
       <% }else{ %>
-        <p>No address added</p>
+        <div class="text-center">
+          <p class="fw-bold">No address added</p>
+        </div>
         <% } %>  
   </section>
 </div>
