--- a/views/users/add-address.ejs
+++ b/views/users/add-address.ejs
@@ -5,18 +5,7 @@
 <%- include('../partials/user-navbar') %> 
 <section class="container min-vh-100">
   <div>
-    <div class="row orders">
-      <div class="col-sm-4 side-bar">
-        <div class="card p-3 m-4">
-          <a class="text-decoration-none" href="/dashboard">Dashboard</a>
-        </div>
-        <div class="card p-3 m-4">
-          <a class="text-decoration-none" href="/orders">Orders</a>
-        </div>
-        <div class="card p-3 m-4 bg-dark">
-          <a class="text-decoration-none text-white" href="/dashboard/address/manage">Manage Address</a>
-        </div>
-      </div>
+    <div class="row">
       <p class="text-danger"><%= message %> </p>
       <form class="row g-3" method="POST" action="/dashboard/address/add">
         <div class="col-12">
